# SoftChor

./: .env.example  .eslintignore  .gitignore  biome.json  docker-compose.dev.yaml  drizzle.config.ts  eslint.config.js  initial_setup.py  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  pyproject.toml  turbo.json  worker.py
apps/web/: .cta.json  .env.example  .prettierignore  eslint.config.js  package.json  prettier.config.js  tsconfig.json  vite.config.ts
apps/web/migrations/: 0006_normal_norrin_radd.sql
apps/web/public/: manifest.json
apps/web/src/: routeTree.gen.ts  router.tsx  styles.css
apps/worker/: image.musicxml
apps/worker/src/: main.py
docs/: TURBOREPO_MIGRATION_PLAN.md
migrations/: 0005_petite_vivisector.sql
migrations/meta/: 0005_snapshot.json  0007_snapshot.json  _journal.json
scripts/: initial_setup.py
services/: docker-compose.dev.yaml
src/: config.py  db.py  routeTree.gen.ts  router.tsx  task_types.py  worker.py
src/components/: AuthForm.tsx  Header.tsx  ThemeProvider.tsx  demo.chat-area.tsx  demo.messages.tsx
src/components/ui/: button.tsx  checkbox.tsx  motion-highlight.tsx  motion-tabs.tsx
src/db/: index.ts  schema.ts
src/hooks/: demo.useChat.ts
src/middleware/: auth.ts
src/processors/: voices_from_xml_processor.py  xml_from_input_processor.py
src/routes/: __root.tsx  _authenticated.tsx  index.tsx  login.tsx
src/routes/_authenticated/: demo.tsx  scores.$songId.tsx  scores.index.tsx
src/routes/api/: sync.$.ts
src/routes/demo/: db-chat.tsx  drizzle.tsx  start.ssr.spa-mode.tsx  (+1 more)
(+70 files in other folders)
